<resources>
    <string name="app_name">PocketSave</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="textTitle">"Por favor complete su información: "</string>
    <string name="txtrut">Rut</string>
    <string name="txtlastname">Apellido Paterno</string>
    <string name="lastnamemat">Apellido Materno</string>
    <string name="txtdate">Fecha de Nacimiento</string>
    <string name="txtgen">"Genero: "</string>
    <string name="rdtextf">Femenino</string>
    <string name="rbtextm">Masculino</string>
    <string name="textadress">Dirección</string>
    <string name="hintemal">Correo electrónico</string>
    <string name="txtpass">Ingrese su contraseña</string>
    <string name="textmin">La constraseña debe tener un mínimo de 6 caracteres.</string>
    <string name="textinclude">Debe incluir números, mayúsculas y carácteres especiales.</string>
    <string name="txtbutton">VALIDAR</string>
    <string name="textterm">Acepto los términos y condiciones.</string>
    <string name="correo">Correo:</string>
    <string name="inss">Iniciar Sesión</string>
    <string name="pass">"Contraseña: "</string>
    <string name="ingpass">Ingresa tu contraseña</string>
    <string name="textingresar">Ingresar</string>
    <string name="textbtnregistrarse"> Registrarse</string>
    <string name="textnoregistrado">¿No tienes una cuenta? Registrate</string>
    <string name="nameappsplash">PocketSave</string>
    <string name="pregunta">¿Qué deseas hacer?</string>
    <string name="item_title_home">Home</string>
    <string name="item_title_gastos">Resumen de Gastos</string>
    <string name="item_title_recordatorios">Recordatorios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>