<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="27dp"
        android:text="@string/welcome"
        android:textSize="@dimen/text_subtitle_size"
        app:layout_constraintBottom_toTopOf="@+id/tituloTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_iniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="24dp"
        android:text="Iniciar Sesión"
        app:layout_constraintBottom_toTopOf="@+id/btn_sensores"
        app:layout_constraintEnd_toStartOf="@+id/btn_registrarse"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="160dp"
        android:text="@string/textbtnregistrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_iniciarSesion" />

    <Button
        android:id="@+id/btn_sensores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="88dp"
        android:text="SENSORES"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_crearDB"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tituloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="28dp"
        android:text="PocketSave"
        android:textSize="@dimen/text_megatitle_size"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="138dp"
        android:text="@string/pregunta"
        android:textSize="@dimen/text_item_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"

        android:layout_marginStart="151dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="74dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloTextView" />

    <Button
        android:id="@+id/btn_crearDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="88dp"
        android:text="Crear bbdd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_sensores" />
</androidx.constraintlayout.widget.ConstraintLayout>